docs/tests/typing/good/testfile-subtype-2.cpp

#include <iostream>
class A { public: };
int main() { A *x = NULL; }

