docs/tests/typing/bad/testfile-scope-2.cpp

int main() { int x; if(x) { int y; } else y; }

